changed to java 11 improved error handling